Freedom Sanbox Ant Deploy/src/objects/SIP_Tracker__c.object
<CustomObject>
    <fields>
        <fullName>Bank_Account_Number__c</fullName>
        <label>Bank Account Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <label>Entity</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SIP Tracker</relationshipLabel>
        <relationshipName>SIP_Tracker</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Folio_Number__c</fullName>
        <label>Folio Number</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Mode__c</fullName>
        <label>Payment Mode</label>
        <picklist>
            <picklistValues>
                <fullName>ECS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cheque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SIP_Amount__c</fullName>
        <description>DreamFactory Custom Field</description>
        <label>SIP Amount</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SIP_End_Date__c</fullName>
        <label>SIP End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SIP_Start_Date__c</fullName>
        <label>SIP Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Scheme_Internal__c</fullName>
        <label>Scheme Internal</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Scheme__c</fullName>
        <label>Scheme</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <label>SIP Tracker</label>
    <nameField>
        <displayFormat>SIP-{0}</displayFormat>
        <label>SIP Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SIP Tracker</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>